# Android-ImGui-Mod-Menu

./: build.gradle
app/: build.gradle
app/src/main/java/com/horoni/menu/: GlViewWrapper.java  MainActivity.java  NativeMethods.java
app/src/main/jni/: .gitignore  CMakeLists.txt
app/src/main/jni/Include/: Format.h  Hooks.h  ImGuiHook.h  JNIHelper.hpp  Menu.h  Offsets.h  Vars.h  Vulkan.h
app/src/main/jni/Include/fonts/: Roboto-Regular.h
app/src/main/jni/Include/inputs/: touch_input_sdl.h  touch_input_unity.h
app/src/main/jni/Include/misc/: Codestage.h  Drawing.h
app/src/main/jni/LibMain/: Logger.h  Utils.h  main.cpp
app/src/main/jni/Loader/: Loader.cpp
app/src/main/jni/Main/: Hooks.cpp  ImGuiHook.cpp  Main.cpp  Menu.cpp  Offsets.cpp  Vulkan.cpp
app/src/main/jni/Misc/: Format.cpp  JNIHelper.cpp
gradle/wrapper/: gradle-wrapper.properties
